Issue 12024: NB! Current build is broken - work in progress. Fixed bugs
git-svn-id: https://svn.imcode.com/imcode/imcms/trunk@30596 bd66a97b-2aff-0310-9095-89ca5cabf5a6